Fixed the white spacing at bottom when scrolling in mobile

--- a/components/animated_background.module.css
+++ b/components/animated_background.module.css
@@ -87,3 +87,9 @@
 		opacity: 0;
 	}
 }
+
+@media only screen and (max-width: 600px) {
+	.wrapper {
+		padding-bottom: 1rem;
+	}
+}
